[package]
name = "totp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
sha1 = "0.10.5"
hex = "0.4.3"
hmac = "0.12.1"
base32 = "0.4.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"