
[package]
name = "authogonal"
version = "0.2.0"
edition = "2021"
description = "A simple OTP code generator"
authors = ["PrimmR"]
repository = "https://github.com/PrimmR/authogonal"

[package.metadata.bundle]
name = "Authogonal"
identifier = "gay.primm.totp"
icon = ["../icon/bundle/*.png"]

[dependencies]
# GUI
eframe = "0.27.2"
chrono = "0.4.29"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

# QR Code Support
bardecoder = "0.4.2"
image = "0.24"
regex = "1.10.2"
rfd = "0.12.1"

# Own Crates
hash = { path = "../hash" }
sort = { path = "../sort" }
encrypt = { path = "../encrypt" }
hash-table = { path = "../hash_table" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"