
[package]
name = "totp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
chrono = "0.4.29"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
hash = { path = "../hash" }
sort = { path = "../sort" }