
[package]
name = "totp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
eframe = "0.27.2"
chrono = "0.4.29"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

# QR Code Support
bardecoder = "0.4.2"
image = "0.24"
regex = "1.10.2"
rfd = "0.12.1"

# Own Crates
hash = { path = "../hash" }
sort = { path = "../sort" }
encrypt = { path = "../encrypt" }
hash-table = { path = "../hash_table" }